--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   },
   "dependencies": {
     "concurrently": "^6.3.0"
+  },
+  "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
+    "@iconify/json": "^2.2.118",
+    "unplugin-icons": "^0.17.0"
   }
 }
