--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-serde = "1.0.130"
+serde = { version = "1.0.130", features = ["derive"] }
 serde_derive = "1.0.130"
 serde_json = "1.0.68"
 wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
@@ -28,6 +28,14 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 #
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
+wasm-bindgen-futures = "0.4.37"
+uuid = { version = "1.4.1", features = ["v4", "js", "serde"] }
+web-sys = { version = "0.3.64", features = ["Window", "Storage"]}
+console_log = "1.0.0"
+gloo-storage = "0.3.0"
+gloo = "0.10.0"
+gloo-console = "0.3.0"
+serde-wasm-bindgen = "0.6.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
